--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@amazingcat/at-ui",
+  "name": "@cattr/ui-kit",
   "version": "1.3.6",
   "description": "A UI Component Library with Vue.js",
   "homepage": "https://at.aotu.io",
@@ -40,10 +40,10 @@
   "author": "Koppt Ho <kopptsoft@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "deepmerge": "^2.0.1",
     "vue": "^2.5.13",
     "vue-i18n": "^7.4.1",
     "vue-router": "^2.8.1",
-    "deepmerge": "^2.0.1",
     "vue-template-compiler": "^2.5.13"
   },
   "devDependencies": {
@@ -93,5 +93,6 @@
     "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.1",
     "yaml-loader": "^0.4.0"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
