Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ deploy:
     - tags
   stage: deploy
   script:
-    - echo "npmAuthToken: \"${CI_JOB_TOKEN}\"" >> .yarnrc.yml
+    - echo "npmAuthToken:\ \"${CI_JOB_TOKEN}\"" >> .yarnrc.yml
     - yarn npm publish
 
 include:
