--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,5 +3,7 @@ nodeLinker: node-modules
 npmScopes:
   cattr:
     npmRegistryServer: "https://git.amazingcat.net/api/v4/packages/npm/"
+    npmPublishRegistry: "https://git.amazingcat.net/api/v4/projects/406/packages/npm/"
+    npmAuthToken: "${CI_JOB_TOKEN-fallback}"
 
 yarnPath: .yarn/releases/yarn-3.2.0.cjs
