--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.amazingcat.net:AmazingTime/core/ui-kit.git"
+    "url": "git@github.com:daniilpanov/ui-kit.git"
   },
   "bugs": {
     "url": "https://git.amazingcat.net/AmazingTime/core/ui-kit/-/issues"
